# ML-and-Blockchain-Electronic-Health-Records-Management-System

./: README.md
app/src/js/: app.js
backend/: app.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json  steps.txt  truffle-config.js
frontend/contracts/: Agent.sol
frontend/src/: doctor.html  index.html  patient.html  register.html
frontend/src/assets/js/: main.js
frontend/src/js/: app.js
